# qrosity

./: .gitattributes  .gitignore  Cargo.toml  README.md  THIRD-PARTY-LICENSES.hbs  THIRD-PARTY-LICENSES.html  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  build.rs
src/: cli.rs  lib.rs  main.rs
src/commands/: gui.rs  mod.rs
src/commands/cli/: mod.rs
src/core/: mod.rs  qrgen.rs  renderer.rs
src/core/renderer/: finder.rs  mod.rs  module.rs  utils.rs
src/core/renderer/eps/: finder.rs  mod.rs  module.rs
src/core/renderer/pdf/: finder.rs  mod.rs  module.rs
src/core/renderer/png/: finder.rs  mod.rs  module.rs
src/core/renderer/svg/: finder.rs  mod.rs  module.rs
src/models/: config.rs  email.rs  image.rs  mod.rs  text.rs  wifi.rs  wrapper.rs
src/modes/: batch.rs  cli.rs  gui.rs  mod.rs
src/qml/: Main.qml  Options.qml
src/qml/forms/: WifiForm.qml
src/shared/: mail.rs  mod.rs  qrgen.rs  text.rs  web.rs  wifi.rs
