[package]
name = "qrosity"
version = "0.1.0"
edition = "2024"
license = "MIT"
categories = ["command-line-utilities", "graphics", "image-processing"]
keywords = ["qt", "image", "qrcode", "qr", "generator", "cli", "gui", "batch"]

[dependencies]
chrono = "0.4.42"
tiny-skia = "0.11.4"
urlencoding = "2.1.3"
image = "0.25.9"
clap = { version = "4.5.53", features = ["derive"] }
cxx = { version = "1.0.189", optional = true }
cxx-qt = { version = "0.7.3", optional = true }
cxx-qt-lib = { version = "0.7.3", optional = true }
cxx-qt-lib-extras = { version = "0.7.3", optional = true } 
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", optional = true }
svg = { version = "0.18.0", optional = true }
base64 = {version = "0.22.1", optional = true }

[build-dependencies]
cxx-qt-build = { version = "0.7.3", features = ["link_qt_object_files"] }

[features]
default = [ "cli" ]
cli = []
gui = ["dep:cxx", "dep:cxx-qt", "dep:cxx-qt-lib", "dep:cxx-qt-lib-extras"]
batch = ["dep:rayon", "dep:serde"]
svg = ["dep:svg", "dep:base64"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
incremental = true  # Improves re-compile times
codegen-units = 1
debug = "full"
panic = "abort"
