[package]
name = "qrosity"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/amaterasu-uwu-xd/qrosity"
homepage = "https://github.com/amaterasu-uwu-xd/qrosity"
description = "A terminal and desktop application for generating QR codes with advanced customization options."
categories = ["command-line-utilities", "multimedia::images" ]
keywords = ["qrcode", "qr"]

[dependencies]
chrono = "0.4.42"
tiny-skia = "0.11.4"
urlencoding = "2.1.3"
image = "0.25.9"
clap = { version = "4.5.53", features = ["derive"] }
cxx = { version = "1.0.189", optional = true }
cxx-qt = { version = "0.7.3", optional = true }
cxx-qt-lib = { version = "0.7.3", optional = true }
cxx-qt-lib-extras = { version = "0.7.3", optional = true } 
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.138", optional = true }

[build-dependencies]
cxx-qt-build = { version = "0.7.3", features = ["link_qt_object_files"], optional = true }

[features]
default = [ "cli" ]
cli = []
gui = ["dep:cxx", "dep:cxx-qt", "dep:cxx-qt-lib", "dep:cxx-qt-lib-extras", "dep:cxx-qt-build"]
batch = ["dep:serde", "dep:serde_json", "dep:rayon"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
incremental = true  # Improves re-compile times
codegen-units = 1
debug = "full"
panic = "abort"
